# ai-learning

./: LICENSE  README.md  environment.yml  makefile  pyproject.toml
ai-learning/: pyproject.toml
data/: expenditures.csv
experiments/: README.md  myfile.csv  pyproject.toml  test-2.py
experiments/experiments/: forecast-expenditures.py  linear-regression-scikit.py
experiments/experiments/sentiment-analysis-games/: README.md  data-clean.csv  data-new-input.csv  data-prediction.csv  sentiment-analysis-games.py  test.py
experiments/project1/: README.md
experiments/project2/: README.md  data.csv  forecast-expenditures.py  project2.md  project2.py
experiments/project3/: README.md  main.py  results.csv  sentiment-analysis.py
experiments/project4/: README.md  project-4.ipynb  project4.py  results.csv  results_grouped.csv  test.py
experiments/project5/: README.md  project-5.ipynb  project5.py  readme-project5.md  test.py
experiments/project6/: .gitignore  README.md  load-model.py  project6.py  test.py  use-model.py
experiments/project7/: README.md  project7.py
experiments/recipes/: network-graph.py  plot-two-charts.py
src/: data.csv  forecast-expenditures.py  hello.py  linear-regression-scikit.py  linear-regression.py
src/forecast-expenditures/: forecast-expenditures.py
src/forecast-expenditures/data/: expenditures.ods
src/linear-regression/: linear-regression-keras.py
