[tool.poetry]
name = "ai-learning"
version = "0.1.0"
description = ""
authors = ["Simone Poggiali <gibbok.coding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.0"
seaborn = "^0.13.2"
pandas = "^2.2.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
