[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Simone Poggiali <gibbok.coding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
