[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Simone Poggiali <gibbok.coding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.0"
requests = "^2.31.0"
seaborn = "^0.13.2"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
pyarrow = "^15.0.0"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
networkx = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
